data/derived/comb/progs/unify/prog6415.ml.out
Characters 64-82:
  | front::back -> ((listReverse back) ::[front]);;
                    ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
